--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
             <div class="logonav darker" style="padding: 0;">
                 <div class ="logo">FDL</div>
                 <nav>
-                    <a href="info.html" class="navs">Info</a>
+                    <a href="index.html" class="navs">Info</a>
                     <a href="work.html" class="navs">Work</a>
                     <a class="navs currnav">Contact</a>
                 </nav>
