--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             </div>
         </div>
         <div class="darker">
-            <img src="1.jpg" alt="Self-Portrait" title="Self-Portrait">
+            <img src="self1.jpg" alt="Self-Portrait" title="Self-Portrait">
             <p class="txt">
                 Fritz D. Lamparas is a computer engineer and tech enthusiast based in Quezon City. He is known for his extensive expertise in technology and software development, all presented with a clean and minimalist aesthetic.
             </p>
-            <img src="2.jpg" alt="Self-Portrait" title="Self-Portrait">
+            <img src="self2.jpg" alt="Self-Portrait" title="Self-Portrait">
         </div>
         <div class="lighter" style="flex-direction: column;">
             <p class="txt">
