--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
         <title>FDL</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <script src="https://kit.fontawesome.com/dda0a0614a.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -35,7 +35,7 @@
             </div>
             <div class="dropdown-menu darker" id="dropdownMenu">
                 <ul>
-                  <li><a href="info.html">Info</a></li>
+                  <li><a href="index.html">Info</a></li>
                   <li><a href="work.html">Work</a></li>
                   <li><a href="contact.html">Contact</a></li>
                   <li><a href="https://www.facebook.com/fritzkie.paras">Facebook</a></li>
@@ -46,9 +46,9 @@
         </div>
         <div class="darker footer">
             <hr>
-            <a class="navs" href="mailto:fritzlamparasofficial@gmail.com"><strong>Email Address:</strong> fritzlamparasofficial@gmail.com</a>
-            <p class="navs"><strong>Contact Num. :</strong> (0951) 074-0514</p>
-            <p class="navs"><strong>Home Address:</strong> 58 San Luis St. Villareal Brgy. Gulod, Novaliches, Quezon City, Philippines, 1117</p>
+            <a class="des" href="mailto:fritzlamparasofficial@gmail.com" style="text-decoration: none; color: #E0E2ED;"><strong>Email Address:</strong> fritzlamparasofficial@gmail.com</a>
+            <p class="des"><strong>Contact Num. :</strong> (0951) 074-0514</p>
+            <p class="des"><strong>Home Address:</strong> 58 San Luis St. Villareal Brgy. Gulod, Novaliches, Quezon City, Philippines, 1117</p>
         </div>
     </body>
     <script src="scripts.js"></script>
