--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>FDL</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <script src="https://kit.fontawesome.com/dda0a0614a.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -35,7 +35,7 @@
             </div>
             <div class="dropdown-menu darker" id="dropdownMenu">
                 <ul>
-                  <li><a href="info.html">Info</a></li>
+                  <li><a href="index.html">Info</a></li>
                   <li><a href="work.html">Work</a></li>
                   <li><a href="contact.html">Contact</a></li>
                   <li><a href="https://www.facebook.com/fritzkie.paras">Facebook</a></li>
@@ -255,40 +255,40 @@
                         </ul>
                         <p class="des"><strong>PUP-CpE Webinars 2021</strong></p>
                         <ul class="responsibilities cert">
-                            <li class="des">Agile Scrum Framework</li>
-                            <li class="des">Agile Testing and The Seven Testing</li>
-                            <li class="des">Data Mining: Process, Concepts, and Tools</li>
-                            <li class="des">The Colors of Cybersecurity: Be Brave or Be Smart</li>
+                            <li class="des" data-img="certifs2021/12.jpg">Agile Scrum Framework</li>
+                            <li class="des" data-img="certifs2021/13.jpg">Agile Testing and The Seven Testing</li>
+                            <li class="des" data-img="certifs2021/14.jpg">Data Mining: Process, Concepts, and Tools</li>
+                            <li class="des" data-img="certifs2021/15.jpg">The Colors of Cybersecurity: Be Brave or Be Smart</li>
                             <li class="des">Succeeding in Web Development: Full Stack and Front End</li>    
                         </ul>
                         <p class="des"><strong>TESDA Online Programs</strong></p>
                         <ul class="responsibilities cert">
-                            <li class="des">Introduction to CSS</li>
+                            <li class="des" data-img="certifs2021/17.jpg">Introduction to CSS</li>
                             <li class="des">Installing and Configuring Computer Systems</li>
                             <li class="des">Maintain Computer Systems and Networks</li>
                             <li class="des">Setting Up Computer Networks</li>
                             <li class="des">Setting Up Computer Servers</li>
                             <li class="des">SMART Android Mobile Apps Development for Beginners</li>
-                            <li class="des">SMART Technopreneurship 101</li>
+                            <li class="des" data-img="certifs2021/23.jpg">SMART Technopreneurship 101</li>
                         </ul>
                         <p class="des"><strong>Trend Micro</strong></p>
                         <ul class="responsibilities cert">
-                            <li class="des">Introduction to Careers in Cybersecurity</li>
+                            <li class="des" data-img="certifs2021/24.jpg">Introduction to Careers in Cybersecurity</li>
                         </ul>
                         <p class="des"><strong>ULAP.org Community Day 2021</strong></p>
                         <ul class="responsibilities cert">
-                            <li class="des">Microsoft Azure</li>
+                            <li class="des" data-img="certifs2021/27.jpg">Microsoft Azure</li>
                         </ul>
                         <p class="des"><strong>WebsitesAdvice</strong></p>
                         <ul class="responsibilities cert">
-                            <li class="des">The Dangers of Social Engineering</li>
-                            <li class="des">The Rise of Phishing Attacks</li>
+                            <li class="des"  data-img="certifs2021/26.jpg">The Dangers of Social Engineering</li>
+                            <li class="des" data-img="certifs2021/27.jpg">The Rise of Phishing Attacks</li>
                         </ul>
                         <p class="des"><strong>WOCEE Tech Talk</strong></p>
                         <ul class="responsibilities cert">
-                            <li class="des">Blockchain and the Cloud</li>
-                            <li class="des">Robotics and Machine Intelligence</li>
-                            <li class="des">Digital Technology Maximization</li>
+                            <li class="des" data-img="certifs2021/28.jpg">Blockchain and the Cloud</li>
+                            <li class="des" data-img="certifs2021/29.jpg">Robotics and Machine Intelligence</li>
+                            <li class="des" data-img="certifs2021/25.jpg">Digital Technology Maximization</li>
                         </ul>
                     </div>
                 </div>
@@ -304,9 +304,9 @@
         </div>
         <div class="darker footer">
             <hr>
-            <a class="navs" href="mailto:fritzlamparasofficial@gmail.com"><strong>Email Address:</strong> fritzlamparasofficial@gmail.com</a>
-            <p class="navs"><strong>Contact Num. :</strong> (0951) 074-0514</p>
-            <p class="navs"><strong>Home Address:</strong> 58 San Luis St. Villareal Brgy. Gulod, Novaliches, Quezon City, Philippines, 1117</p>
+            <a class="des" href="mailto:fritzlamparasofficial@gmail.com"><strong>Email Address:</strong> fritzlamparasofficial@gmail.com</a>
+            <p class="des"><strong>Contact Num. :</strong> (0951) 074-0514</p>
+            <p class="des"><strong>Home Address:</strong> 58 San Luis St. Villareal Brgy. Gulod, Novaliches, Quezon City, Philippines, 1117</p>
         </div>
     </body>
     <script src="scripts.js"></script>
