--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                 </nav>
             </div>
             <div class="socmed">
+                <a href="https://drive.google.com/file/d/1m3LCaJJBKu0QXZPLsvTmFQs_siB_aiLQ/view" class="resume"> 
+                    <button><i class="fa-solid fa-file fa-2x"></i></button></a>
                 <a href="https://www.facebook.com/fritzkie.paras">
                     <button><i class="fa-brands fa-facebook fa-2x"></i></button></a>    
                 <a href="https://www.linkedin.com/in/fritz-lamparas-418b57219/">   
@@ -38,6 +40,7 @@
                   <li><a href="index.html">Info</a></li>
                   <li><a href="work.html">Work</a></li>
                   <li><a href="contact.html">Contact</a></li>
+                  <li><a href="https://drive.google.com/file/d/1m3LCaJJBKu0QXZPLsvTmFQs_siB_aiLQ/view">Get Resume</a></li>
                   <li><a href="https://www.facebook.com/fritzkie.paras">Facebook</a></li>
                   <li><a href="https://www.linkedin.com/in/fritz-lamparas-418b57219/">LinkedIn</a></li>
                   <li><a href="https://m.me/fritzkie.paras">Messenger</a></li>
@@ -123,7 +126,8 @@
                             <li class="des">Managed and organized complaints being addressed and other relevant files related to the Councilor.</li>
                             <li class="des">Engaged in guest relations and running errands for other offices.</li>
                         </ul>
-                        <div style="border-top: 1px dashed #E0E2ED;"> 
+                        <hr>
+                        <div> 
                             <p class="des"><strong>Company:</strong> DOLE CAMANAVA Field Office</p>
                             <p class="des"><strong>Location:</strong> Caloocan City, Metro Manila</p>
                             <p class="des"><strong>Nature of Work:</strong> Special Program for Employment of Students</p>
@@ -235,40 +239,39 @@
                     <div class="dropdown-content">
                         <p class="des"><strong>def IT Pantry(): A webinar series for the latest web technologies</strong></p>
                         <ul class="responsibilities cert">
-                            <li class="des" data-img="certifs2021/25.jpg">Debugging Web Apps through Selenium Test Automation</li>
-                            <li class="des" data-img="certifs2021/2.jpg">How Games Inspired my Programming Skills</li>
-                            <li class="des" data-img="certifs2021/2.jpg">Intro to Python</li>
-                            <li class="des" data-img="certifs2021/25.jpg">Intro to Django</li>
-                            <li class="des" data-img="certifs2021/25.jpg">Python for Data Engineers</li>
-                            <li class="des" data-img="certifs2021/25.jpg">Software Engineering and Tech Communities</li>
+                            <li class="des" data-img="certifs2021/1-6.jpg">Debugging Web Apps through Selenium Test Automation</li>
+                            <li class="des" data-img="certifs2021/2-3.jpg">How Games Inspired my Programming Skills</li>
+                            <li class="des" data-img="certifs2021/2-3.jpg">Intro to Python</li>
+                            <li class="des" data-img="certifs2021/4-5.jpg">Intro to Django</li>
+                            <li class="des" data-img="certifs2021/4-5.jpg">Python for Data Engineers</li>
+                            <li class="des" data-img="certifs2021/1-6.jpg">Software Engineering and Tech Communities</li>
                         </ul>
                         <p class="des"><strong>LinkedIn Learning</strong></p>
                         <ul class="responsibilities cert">
-                            <li class="des" data-img="certifs2021/25.jpg">HTML Essential Training</li>
-                            <li class="des" data-img="certifs2021/25.jpg">Learning SQL Programming</li>
-                            <li class="des" data-img="certifs2021/25.jpg">Power BI Essential Training</li>
-                            <li class="des" data-img="certifs2021/25.jpg">Succeeding in Web Development: Full Stack and Front End</li>
+                            <li class="des" data-img="certifs2021/7.jpg">HTML Essential Training</li>
+                            <li class="des" data-img="certifs2021/8.jpg">Learning SQL Programming</li>
+                            <li class="des" data-img="certifs2021/9.jpg">Power BI Essential Training</li>
+                            <li class="des" data-img="certifs2021/10.jpg">Succeeding in Web Development: Full Stack and Front End</li>
                         </ul>
                         <p class="des"><strong>PUP - INTELLECTUAL PROPERTY MANAGEMENT OFFICE <br> AND THE INNOVATION AND TECHNOLOGY SUPPORT OFFICE</strong></p>
                         <ul class="responsibilities cert">
-                            <li class="des">IP Awareness and Patent Searching Webinar</li>
+                            <li class="des" data-img="certifs2021/11.jpg">IP Awareness and Patent Searching Webinar</li>
                         </ul>
                         <p class="des"><strong>PUP-CpE Webinars 2021</strong></p>
                         <ul class="responsibilities cert">
                             <li class="des" data-img="certifs2021/12.jpg">Agile Scrum Framework</li>
                             <li class="des" data-img="certifs2021/13.jpg">Agile Testing and The Seven Testing</li>
                             <li class="des" data-img="certifs2021/14.jpg">Data Mining: Process, Concepts, and Tools</li>
-                            <li class="des" data-img="certifs2021/15.jpg">The Colors of Cybersecurity: Be Brave or Be Smart</li>
-                            <li class="des">Succeeding in Web Development: Full Stack and Front End</li>    
+                            <li class="des" data-img="certifs2021/15.jpg">The Colors of Cybersecurity: Be Brave or Be Smart</li> 
                         </ul>
                         <p class="des"><strong>TESDA Online Programs</strong></p>
                         <ul class="responsibilities cert">
                             <li class="des" data-img="certifs2021/17.jpg">Introduction to CSS</li>
-                            <li class="des">Installing and Configuring Computer Systems</li>
-                            <li class="des">Maintain Computer Systems and Networks</li>
-                            <li class="des">Setting Up Computer Networks</li>
-                            <li class="des">Setting Up Computer Servers</li>
-                            <li class="des">SMART Android Mobile Apps Development for Beginners</li>
+                            <li class="des" data-img="certifs2021/18.jpg">Installing and Configuring Computer Systems</li>
+                            <li class="des" data-img="certifs2021/19.jpg">Maintain Computer Systems and Networks</li>
+                            <li class="des" data-img="certifs2021/20.jpg">Setting Up Computer Networks</li>
+                            <li class="des" data-img="certifs2021/21.jpg">Setting Up Computer Servers</li>
+                            <li class="des" data-img="certifs2021/22.jpg">SMART Android Mobile Apps Development for Beginners</li>
                             <li class="des" data-img="certifs2021/23.jpg">SMART Technopreneurship 101</li>
                         </ul>
                         <p class="des"><strong>Trend Micro</strong></p>
@@ -277,7 +280,7 @@
                         </ul>
                         <p class="des"><strong>ULAP.org Community Day 2021</strong></p>
                         <ul class="responsibilities cert">
-                            <li class="des" data-img="certifs2021/27.jpg">Microsoft Azure</li>
+                            <li class="des" data-img="certifs2021/25.jpg">Microsoft Azure</li>
                         </ul>
                         <p class="des"><strong>WebsitesAdvice</strong></p>
                         <ul class="responsibilities cert">
@@ -288,7 +291,7 @@
                         <ul class="responsibilities cert">
                             <li class="des" data-img="certifs2021/28.jpg">Blockchain and the Cloud</li>
                             <li class="des" data-img="certifs2021/29.jpg">Robotics and Machine Intelligence</li>
-                            <li class="des" data-img="certifs2021/25.jpg">Digital Technology Maximization</li>
+                            <li class="des" data-img="certifs2021/30.jpg">Digital Technology Maximization</li>
                         </ul>
                     </div>
                 </div>
