--- a/projects.html
+++ b/projects.html
@@ -18,8 +18,7 @@
                 <div class ="logo">FDL</div>
                 <nav>
                     <a href="index.html" class="navs">Info</a>
-                    <a class="navs currnav">Work</a>
-                    <a href="contact.html" class="navs">Contact</a>
+                    <a class="navs currnav">Projects</a>
                 </nav>
             </div>
             <div class="socmed">
@@ -36,19 +35,18 @@
             <div class="dropdown-menu darker" id="dropdownMenu">
                 <ul>
                   <li><a href="index.html">Info</a></li>
-                  <li><a href="work.html">Work</a></li>
-                  <li><a href="contact.html">Contact</a></li>
+                  <li><a href="projects.html">Projects</a></li>
                   <li><a href="https://www.facebook.com/fritzkie.paras">Facebook</a></li>
                   <li><a href="https://www.linkedin.com/in/fritz-lamparas-418b57219/">LinkedIn</a></li>
                   <li><a href="https://m.me/fritzkie.paras">Messenger</a></li>
                 </ul>
             </div>
         </div>
-        <div class="darker footer">
+        <div class="darker footer des">
             <hr>
-            <a class="des" href="mailto:fritzlamparasofficial@gmail.com" style="text-decoration: none; color: #E0E2ED;"><strong>Email Address:</strong> fritzlamparasofficial@gmail.com</a>
-            <p class="des"><strong>Contact Num. :</strong> (0951) 074-0514</p>
-            <p class="des"><strong>Home Address:</strong> 58 San Luis St. Villareal Brgy. Gulod, Novaliches, Quezon City, Philippines, 1117</p>
+            <a href="mailto:fritzlamparasofficial@gmail.com"><strong>Email Address:</strong> fritzlamparasofficial@gmail.com</a>
+            <p><strong>Contact Num. :</strong> (0951) 074-0514</p>
+            <p><strong>Home Address:</strong> 58 San Luis St. Villareal Brgy. Gulod, Novaliches, Quezon City, Philippines, 1117</p>
         </div>
     </body>
     <script src="scripts.js"></script>
