projects header fix

--- a/projects.html
+++ b/projects.html
@@ -22,6 +22,8 @@
                 </nav>
             </div>
             <div class="socmed">
+                <a href="https://drive.google.com/file/d/1m3LCaJJBKu0QXZPLsvTmFQs_siB_aiLQ/view" class="resume" target="_blank"> 
+                    <button><i class="fa-solid fa-file fa-2x"></i></button></a>
                 <a href="https://www.facebook.com/fritzkie.paras">
                     <button><i class="fa-brands fa-facebook fa-2x"></i></button></a>    
                 <a href="https://www.linkedin.com/in/fritz-lamparas-418b57219/">   
@@ -36,6 +38,7 @@
                 <ul>
                   <li><a href="index.html">Info</a></li>
                   <li><a href="projects.html">Projects</a></li>
+                  <li><a href="https://drive.google.com/file/d/1m3LCaJJBKu0QXZPLsvTmFQs_siB_aiLQ/view">Get Resume</a></li>
                   <li><a href="https://www.facebook.com/fritzkie.paras">Facebook</a></li>
                   <li><a href="https://www.linkedin.com/in/fritz-lamparas-418b57219/">LinkedIn</a></li>
                   <li><a href="https://m.me/fritzkie.paras">Messenger</a></li>
