--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <div class="header darker" style="flex-direction: row;">
             <div class="logonav darker" style="padding: 0;">
-                <div class ="logo">FDL</div>
+                <a href="index.html" class ="logo">FDL</a>
                 <nav>
                     <a class="navs currnav">Info</a>
                     <a href="projects.html" class="navs">Projects</a>
@@ -45,25 +45,12 @@
                 </ul>
             </div>
         </div>
-        <div class="darker">
+        <div class="lighter">
             <img src="self1.jpg" alt="Self-Portrait" title="Self-Portrait">
             <p class="txt">
                 Fritz D. Lamparas is a computer engineer and tech enthusiast based in Quezon City. He is known for his extensive expertise in technology and software development, all presented with a clean and minimalist aesthetic.
             </p>
             <img src="self2.jpg" alt="Self-Portrait" title="Self-Portrait">
-        </div>
-        <div class="lighter" style="flex-direction: column;">
-            <p class="txt">
-                Skills and Proficiency
-            </p>
-            <p class="dest" style="text-align: center;">
-                The following chart shows a reference of his primary skills and how much he is proficient with it.
-            </p>
-            <div class="chartcon">
-                <canvas id="myBarChart" width="10" height="10"></canvas>
-            </div>
-            <div id="legrow">
-            </div>
         </div>
         <div class="darker flexs">
             <div class="txt title">
@@ -319,6 +306,19 @@
                 <img id="modal-img" src=" " alt="Certificate" class="cert-img">  
             </div>
         </div>
+        </div>
+        <div class="lighter" style="flex-direction: column;">
+            <p class="txt">
+                Skills and Proficiency
+            </p>
+            <p class="dest" style="text-align: center;">
+                The following chart shows a reference of his primary skills and how much he is proficient with it.
+            </p>
+            <div class="chartcon">
+                <canvas id="myBarChart" width="10" height="10"></canvas>
+            </div>
+            <div id="legrow">
+            </div>
         </div>
         <div class="darker footer des">
             <hr>
