--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
     <body>
         <div class="header darker" style="flex-direction: row;">
             <div class="logonav darker" style="padding: 0;">
-                <div class ="logo">FDL</div>
+                <a href="index.html" class ="logo">FDL</a>
                 <nav>
                     <a href="index.html" class="navs">Info</a>
                     <a class="navs currnav">Projects</a>
@@ -43,6 +43,33 @@
                   <li><a href="https://www.linkedin.com/in/fritz-lamparas-418b57219/">LinkedIn</a></li>
                   <li><a href="https://m.me/fritzkie.paras">Messenger</a></li>
                 </ul>
+            </div>
+        </div>
+        <div class="darker flexj">
+            <div class="categ">
+                <h2>FLUTTER APPS</h2>
+            </div>
+            <div class="card">
+                <p><span>STUDYFORGE</span></p>
+                <p><span>PICLEAF</span></p>
+                <p><span>LETSGROW</span></p>
+                <p><span>ABOUTPAWS</span></p>
+                <p><span>DR. TRASH</span></p>
+            </div>
+            <div class="categ">
+                <h2>WEBSITES</h2>
+            </div>
+            <div class="card">
+                <p><span>WISHLIST</span></p>
+                <p><span>LETSGROW CHARTS</span></p>
+                <p><span>FDL</span></p> 
+            </div>
+            <div class="categ">
+                <h2>GAMES</h2>
+            </div>
+            <div class="card">
+                <p><span>HODO'S WORLD <br> ADVENTURE</span></p>
+
             </div>
         </div>
         <div class="darker footer des">
