--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="socmed">
                 <a href="https://drive.google.com/file/d/1m3LCaJJBKu0QXZPLsvTmFQs_siB_aiLQ/view" class="resume" target="_blank"> 
-                    <button><i class="fa-solid fa-file fa-2x"></i></button></a>
+                    <button><i class="fa-solid fa-file-arrow-down fa-2x"></i></button></a>
                 <a href="https://www.facebook.com/fritzkie.paras">
                     <button><i class="fa-brands fa-facebook fa-2x"></i></button></a>    
                 <a href="https://www.linkedin.com/in/fritz-lamparas-418b57219/">   
