--- a/studyforge.html
+++ b/studyforge.html
@@ -45,6 +45,26 @@
                 </ul>
             </div>
         </div>
+        <div class="lighter flexj">
+            <div class="categ">
+                <img src="icons/sf.png" alt="StudyForge" title="StudyForge">
+                <div class="txt">
+                    STUDYFORGE
+                </div>
+            </div>
+            <div class="categ">  
+                    <p class="des">Tools Used: </p>                      
+                    <img src="icons/vscode.png" alt="VSCode" title="VSCode">
+                    <img src="icons/flutter.png" alt="Flutter" title="Flutter">
+                    <img src="icons/firebase.png" alt="Firebase" title="Firebase">
+                    <img src="icons/firebase.png" alt="Firebase" title="Firebase">
+            </div>  
+            <div class="categ">
+                <p class="des" style="text-align: justify;">StudyForge is a mobile app designed to aid computer engineering students in preparing for their exams. The app employs a quiz tool to test users on crucial exam topics, providing a streamlined and effective study experience with its user-friendly interface. StudyForge is an essential companion for students seeking comprehensive review in the field of computer engineering.</p>
+            </div>
+            
+
+        </div>
         <div class="darker flexj">
             <div class="categ">
                 <h2>FLUTTER APPS</h2>
