--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                     <button><i class="fa-brands fa-facebook fa-2x"></i></button></a>    
                 <a href="https://www.linkedin.com/in/fritz-lamparas-418b57219/">   
                     <button><i class="fa-brands fa-linkedin fa-2x"></i></button></a>
-                <a href="https://m.me/fritzkie.paras"> 
-                    <button><i class="fa-brands fa-facebook-messenger fa-2x"></i></button></a>
+                <a href="https://github.com/fritzlamparas?tab=repositories"> 
+                    <button><i class="fa-brands fa-github fa-2x"></i></button></a>
             </div>
             <div class="menu-icon" onclick="toggleMenu()" id="menuIcon">
                 ☰
@@ -41,7 +41,7 @@
                   <li><a href="https://drive.google.com/file/d/1m3LCaJJBKu0QXZPLsvTmFQs_siB_aiLQ/view">Get Resume</a></li>
                   <li><a href="https://www.facebook.com/fritzkie.paras">Facebook</a></li>
                   <li><a href="https://www.linkedin.com/in/fritz-lamparas-418b57219/">LinkedIn</a></li>
-                  <li><a href="https://m.me/fritzkie.paras">Messenger</a></li>
+                  <li><a href="https://github.com/fritzlamparas?tab=repositories">Github</a></li>
                 </ul>
             </div>
         </div>
@@ -311,7 +311,7 @@
             <p class="txt">
                 Skills and Proficiency
             </p>
-            <p class="dest" style="text-align: center;">
+            <p class="des" style="text-align: center;">
                 The following chart shows a reference of his primary skills and how much he is proficient with it.
             </p>
             <div class="chartcon">
@@ -326,7 +326,8 @@
             <p><strong>Contact Num. :</strong> (0951) 074-0514</p>
             <p><strong>Home Address:</strong> 58 San Luis St. Villareal Brgy. Gulod, Novaliches, Quezon City, Philippines, 1117</p>
         </div>
-    </body>
     <script src="scripts.js"></script>
+    </body>
+    
     
 </html>
