--- a/projects.html
+++ b/projects.html
@@ -28,8 +28,8 @@
                     <button><i class="fa-brands fa-facebook fa-2x"></i></button></a>    
                 <a href="https://www.linkedin.com/in/fritz-lamparas-418b57219/">   
                     <button><i class="fa-brands fa-linkedin fa-2x"></i></button></a>
-                <a href="https://m.me/fritzkie.paras"> 
-                    <button><i class="fa-brands fa-facebook-messenger fa-2x"></i></button></a>
+                <a href="https://github.com/fritzlamparas?tab=repositories"> 
+                    <button><i class="fa-brands fa-github fa-2x"></i></button></a>                    
             </div>
             <div class="menu-icon" onclick="toggleMenu()" id="menuIcon">
                 ☰
@@ -41,7 +41,7 @@
                   <li><a href="https://drive.google.com/file/d/1m3LCaJJBKu0QXZPLsvTmFQs_siB_aiLQ/view">Get Resume</a></li>
                   <li><a href="https://www.facebook.com/fritzkie.paras">Facebook</a></li>
                   <li><a href="https://www.linkedin.com/in/fritz-lamparas-418b57219/">LinkedIn</a></li>
-                  <li><a href="https://m.me/fritzkie.paras">Messenger</a></li>
+                  <li><a href="https://github.com/fritzlamparas?tab=repositories">Github</a></li>
                 </ul>
             </div>
         </div>
@@ -51,9 +51,9 @@
             </div>
             <div class="card">
                 <a href="studyforge.html"><span>STUDYFORGE</span></a>
-                <a><span>PICLEAF</span></a>
+                <a href="picleaf.html"><span>PICLEAF</span></a>
                 <a><span>LETSGROW</span></a>
-                <a><span>ABOUTPAWS</span></a>
+                <a href="aboutpaws.html"><span>ABOUTPAWS</span></a>
                 <a><span>DR. TRASH</span></a>
             </div>
             <div class="categ">
@@ -78,7 +78,6 @@
             <a><strong>Contact Num. :</strong> (0951) 074-0514</a>
             <a><strong>Home Address:</strong> 58 San Luis St. Villareal Brgy. Gulod, Novaliches, Quezon City, Philippines, 1117</a>
         </div>
-    </body>
     <script src="scripts.js"></script>
-    
+    </body>
 </html>
