--- a/aboutpaws.html
+++ b/aboutpaws.html
@@ -116,6 +116,7 @@
             <a><strong>Home Address:</strong> 58 San Luis St. Villareal Brgy. Gulod, Novaliches, Quezon City, Philippines, 1117</a>
         </div>
     <script src="scripts.js"></script>
+    <script src="projscripts.js"></script>
     </body>
     
 </html>
