--- a/fdl.html
+++ b/fdl.html
@@ -54,7 +54,8 @@
             </div>
             <div class="categ">  
                     <p class="des">Tools Used: </p>   
-                    <img src="icons/vscode.png" alt="VSCode" title="VSCode">                  
+                    <img src="icons/vscode.png" alt="VSCode" title="VSCode">     
+                    <img src="icons/figma.png" alt="Figma" title="Figma">                
             </div>  
             <div class="categ">
                 <p class="des" style="text-align: center;">
