--- a/fdl.html
+++ b/fdl.html
@@ -105,7 +105,7 @@
  
         <div class="darker flexj">
             <div class="categ">
-                <h2>FLUTTER APPS</h2>
+                <h2>MOBILE APPS</h2>
             </div>
             <div class="card">
                 <a href="studyforge.html"><span>STUDYFORGE</span></a>
