--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
         </div>
         <div class="darker flexj">
             <div class="categ">
-                <h2>FLUTTER APPS</h2>
+                <h2>MOBILE APPS</h2>
             </div>
             <div class="card">
                 <a href="studyforge.html"><span>STUDYFORGE</span></a>
