--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@
             <p><strong>Home Address:</strong> 58 San Luis St. Villareal Brgy. Gulod, Novaliches, Quezon City, Philippines, 1117</p>
         </div>
     <script src="scripts.js"></script>
+    <script src="projscripts.js"></script>
     </body>
     
     
