--- a/projects.html
+++ b/projects.html
@@ -353,7 +353,7 @@
             </div>  
             <div class="categ">
                 <p class="des" style="text-align: center;">
-                    FDL is the professional portfolio of Fritz D. Lamparas, a showcase of expertise, experience, and accomplishments. Derived from the initials of my name, FDL is designed to provide potential employers with a comprehensive view of my skills and credentials.
+                    FDL is the professional portfolio of Fritz D. Lamparas, a showcase of expertise, experience, and accomplishments. Derived from the initials of his name, FDL is designed to provide potential employers with a comprehensive view of his skills and credentials.
                     <br>
                     <br>
                     Language Used:
