--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset set="UTF-8">  
-        <meta name="viewport" content = "width=device-width, initial-scale=1">
+        <meta name="viewport" content = "width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href = "style.css">
         <title>FDL</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,7 +36,7 @@
                 <a href="https://github.com/fritzlamparas?tab=repositories" target="_blank"> 
                     <i class="fa-brands fa-square-github fa-3x"></i></a>         
             </div>
-            <div class="menu-icon" onclick="toggleMenu()" id="menuIcon">
+            <div class="burger" onclick="toggleMenu()" id="menuIcon">
                 ☰
             </div>
             <div class="dropdown-menu darker" id="dropdownMenu">
